Anime style design added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sahil's Website</title>
+  <meta charset="UTF-8">
+  <title>Sahil | Anime Style</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+      color: white;
+      text-align: center;
+    }
+
+    nav {
+      background: rgba(0,0,0,0.6);
+      padding: 15px;
+      position: sticky;
+      top: 0;
+    }
+
+    nav a {
+      color: #00f5ff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #ff4ecd;
+    }
+
+    .hero {
+      padding: 80px 20px;
+    }
+
+    .hero h1 {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      opacity: 0.9;
+    }
+
+    .card {
+      background: rgba(255,255,255,0.1);
+      margin: 30px auto;
+      padding: 20px;
+      border-radius: 15px;
+      width: 85%;
+      max-width: 400px;
+      box-shadow: 0 0 20px rgba(0,255,255,0.3);
+    }
+
+    button {
+      background: #ff4ecd;
+      border: none;
+      padding: 12px 25px;
+      color: white;
+      border-radius: 25px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #00f5ff;
+      color: black;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      font-size: 14px;
+      opacity: 0.7;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my website 👋</h1>
-  <p>This is my first free website made using GitHub Pages.</p>
-  <p>Created from Android phone 📱</p>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Gallery</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <div class="hero">
+    <h1>🌸 Welcome, I’m Sahil</h1>
+    <p>My first anime-style website ✨</p>
+  </div>
+
+  <div class="card">
+    <h2>About Me</h2>
+    <p>I built this website from my Android phone 📱 using GitHub Pages.</p>
+    <button>Say Hi 👋</button>
+  </div>
+
+  <footer>
+    © 2026 Sahil • Anime vibes only 🌙
+  </footer>
+
 </body>
 </html>
