--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+      background: url('bg.jpg') no-repeat center center fixed;
+background-size: cover;
       color: white;
       text-align: center;
     }
